編集機能途中疑問点あり

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
                     <button type="submit" class="delete-btn">削除</button>
                 </form>
                 
-                <form method="post" action="/edit/{{loop.index0}}" style="display:inline;">
+                <form method="get" action="/edit/{{loop.index0}}" style="display:inline;">
                     <button type="submit" class="edit-btn">編集</button>
                 </form>
             </li>
