--- a/templates/index.html
+++ b/templates/index.html
@@ -26,9 +26,8 @@
                     <button type="submit" class="delete-btn">削除</button>
                 </form>
                 
-                <form method="get" action="/edit/{{loop.index0}}" style="display:inline;">
-                    <button type="submit" class="edit-btn">編集</button>
-                </form>
+                <a href="{{ url_for('edit', task_id=loop.index0) }}">編集
+                </a>
             </li>
         {% endfor %}
     </ol>
