--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>やることリスト</title>
+    <title>やる気出すナマケモノ</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 <body>
-    <h1>習慣タスク</h1>
+    <h1>やる気出すナマケモノ</h1>
 
     <p>ここにタスクリストが表示されます。</p>
     <form method="post">
