タスクDB化＆json削除

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,16 +18,16 @@
     <ol>
         {% for task in tasks %}
             <li>
-                <form method="post" action="/toggle/{{loop.index0}}" style="display: inline;">
+                <form method="post" action="/toggle/{{task.id}}" style="display: inline;">
                     <input type="checkbox" name="done" onchange="this.form.submit()" {% if task.done %}checked{% endif %}>
                     {{task.name}}
                 </form>
 
-                <form method="post" action="/delete/{{ loop.index0 }}" style="display:inline;">
+                <form method="post" action="/delete/{{ task.id }}" style="display:inline;">
                     <button type="submit" class="delete-btn">削除</button>
                 </form>
                 
-                <a href="{{ url_for('edit', task_id=loop.index0) }}">編集
+                <a href="{{ url_for('edit', task_id=task.id) }}">編集
                 </a>
             </li>
         {% endfor %}
