--- a/static/style.css
+++ b/static/style.css
@@ -1,17 +1,21 @@
 body {
     font-family: Arial, sans-serif;
     background: #f9f9f9;
+    background-image: url(background/bg_1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
     padding: 20px;
     text-align: center;
 }
 
 h1 {
-    color: #333;
+    color: #000000;
     margin-bottom: 20px;
 }
 
 form {
     margin-bottom: 15px;
+    text-align: center;
 }
 
 input[type="text"] {
